--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@ body{
     box-sizing: border-box;
     background-color: #3f3f3f;
     font-family: 'Raleway', sans-serif;
-    height: 2000px;
+    height: 4000px;
     width: 100%;
     background-repeat: no-repeat;
     position: relative;
@@ -12,6 +12,10 @@ body{
     background-image: linear-gradient(to right, #00ccff , rgb(0, 102, 255));
 }
 
+button{
+    outline: none;
+    border: none;
+}
 
 ul{
     list-style: none;
@@ -21,22 +25,23 @@ a{
     text-decoration: none;
 }
 
-nav{
+header nav{
     display: flex;
     align-items: center;
     position: fixed;
     z-index: 1;
+    height: 80px;
     width: 100%;
     justify-content: space-around;
     background-color: black;
     overflow: visible;
 }
 
-nav ul{
+header nav ul{
     display: flex;    
 }
 
-nav ul li a{
+header nav ul li a{
     height: 40px;
     line-height: 43px;
     margin: 3px;
@@ -50,7 +55,7 @@ nav ul li a{
     transition: 0.6s ease;
 }
 
-nav ul li a:hover{
+header nav ul li a:hover{
     border-bottom: 2px solid rgb(0, 204, 255);
     box-shadow: 5px 10px 30px rgba(0, 204, 255,1);
     transition: 0.6s ease;
@@ -89,18 +94,131 @@ nav ul li a:hover{
     color: black;
     margin-top: 25px;
     transition: 0.6s ease-in out;
-    text-transform: uppercase; 
     color: white;
+    font-size: 0.8rem;
+    text-transform: uppercase;
+    font-weight: 500;
+    transition: 0.2s ease-in-out;
 }
 
 .big-button:hover{
     background-color: #00d9ff;
-    transition: 0.1s ease;
 }
-
 
 #about{
     width: 100%;
     height: 1000px;
     background-color: #3f3f3f;
+    display: flex;
+    box-sizing: border-box;
+    align-items: center;
+    justify-content: space-between;
+    padding: 50px 5% 0px 5%;
+    position: relative;
+}
+.about-img{
+    width: 50%;
+}
+
+.about-img img{
+    width: 600px;
+}
+.about-txt{
+    width: 45%;
+    color: white;
+} 
+
+.about-txt h2{
+    font-size: 2rem;
+    font-weight: 600;
+}
+
+.about-txt h2 span{
+    color: #00ccff;
+}
+
+.about-txt h3{
+    color: #00ccff; 
+}
+
+.about-txt p{
+    width: 500px;
+    color: white; 
+}
+
+.space{
+    width: 100%;
+    height: 500px;
+    background-color: transparent;
+    position: relative;
+}
+
+#contact{
+    width: 100%;
+    height: 1000px;
+    background-color: #3f3f3f;
+    display: flex;
+    box-sizing: border-box;
+    align-items: center;
+    justify-content: space-between;
+    padding: 50px 5% 0px 5%;
+    position: relative;
+}
+
+.contact-txt {
+    color: white; 
+}
+
+.contact-txt h2{
+    font-size: 2rem;
+    font-weight: 600;
+}
+
+footer{
+    width: 100%;
+    height: 80px;
+    background-color: #3f3f3f;
+
+    /* position absolute and bottom 0 makes it stick to the bottom of the page */
+    position: absolute;
+    bottom: 0;
+}
+
+footer nav{
+    display: flex;
+    align-items: center;
+    height: 80px;
+    width: 100%;
+    justify-content: space-between;
+    background-color: #3f3f3f;
+    overflow: visible;
+}
+
+footer p{
+    font-size: 0.7rem;
+    text-transform: uppercase;
+    font-weight: 500;
+    color: white;
+    margin-left: 30px;
+    line-height: 80px;
+    letter-spacing: 1px;
+}
+
+footer nav ul{
+    display: flex;    
+}
+
+footer nav ul li a{
+    height: 40px;
+    line-height: 80px;
+    margin-left: 30px;
+    margin-right: 30px;
+    padding: 0px 17px;
+    display: flex;
+    font-size: 0.7rem;
+    text-transform: uppercase;
+    font-weight: 500;
+    color: white;
+    letter-spacing: 1px;
+    transition: 0.6s ease;
 }
